--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   bloc: ^8.0.3
   flutter_bloc: ^8.0.1
   http: ^1.2.1
+  pretty_http_logger: ^1.0.3
 
 dev_dependencies:
   flutter_test:
