refactory credit card flipper

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   pretty_http_logger: ^1.0.3
   intl: ^0.18.1
   flutter_svg: ^2.0.10+1
+  flip_card: ^0.7.0
 
 dev_dependencies:
   flutter_test:
