--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl: ^0.18.1
   flutter_svg: ^2.0.10+1
   flip_card: ^0.7.0
+  flutter_modular: 5.0.3
 
 dev_dependencies:
   flutter_test:
